# a4i-google-hackathon

./: pyproject.toml
.github/workflows/: socket-security.yml  socket.yml
