[project]
name = "a4i"
version = "1.0.0"
description = "First Responder Agent - An intelligent multi-agent system for emergency response coordination and disaster management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-adk>=0.3.1",
    "google-adk>=1.16.0",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "googlemaps>=4.10.0",
    "pyyaml==5.3.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "agent",
    "first_responder_agent",
    "first_responder_agent.common",
    "first_responder_agent.disaster_discovery_agent",
    "first_responder_agent.disaster_discovery_agent.fema_live_agent",
    "first_responder_agent.disaster_discovery_agent.noaa_live_agent",
    "first_responder_agent.relief_finder_agent",
    "first_responder_agent.insights_agent",
]
